# OpenCV-WebRTC-Streamer

./: .gitmodules  CMakeLists.txt  README.md
src/: WebRTCStreamer.cpp  WebRTCStreamer.hpp  main.cpp
static/: index.html
